<resources>
    <string name="app_name">E-commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">EMAIL</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="username_email">USERNAME / EMAIL</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="shoes">Shoes</string>
    <string name="latest">Latest</string>
    <string name="all_categories">All categories</string>
    <string name="apparel">Apparel</string>
    <string name="beauty">Beauty</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="stationary">Stationary</string>
    <string name="men_s_apparel">MEN\'S APPAREL</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="clear">CLEAR</string>
    <string name="best_match">BEST MATCH</string>
    <string name="top_rated">TOP RATED</string>
    <string name="price_low_high">PRICE LOW-HIGH</string>
    <string name="price_high_low">PRICE HIGH-LOW</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="select_size">SELECT SIZE</string>
    <string name="refine_results">REFINE RESULTS</string>
    <string name="view">View</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="material">Material</string>
    <string name="color">Color</string>
    <string name="brand">Brand</string>
    <string name="price_range">Price range</string>
    <string name="size">Size</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="pending_shipments">Pending Shipments</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="customer_support">Customer Support</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="make_a_suggestion">Make A Suggestion</string>
    <string name="more">More</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal_information">Legal Information</string>
    <string name="log_out">Log out</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="type_your_message">Type your message</string>
    <string name="order_placed">Order Placed!</string>
    <string name="your_order_was_placed_successfully_for_more_details_check_all_my_orders_page_under_profile_tab">Your order was placed successfully. For more details, check All My Orders page under Profile tab</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="add_to_cart">add to cart</string>
    <string name="share_this">share this</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
</resources>

