<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F6F8">

            <TextView
                android:id="@+id/fragment_forgot_password_signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/sign_up"
                android:textColor="#33515C6F"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/fragment_forgot_password_forgot_Password_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_forgot_password_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/login"
                android:textColor="#33515C6F"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/fragment_forgot_password_signup_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_forgot_password_forgot_Password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/forgot_password"
                android:textColor="#515C6F"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/if_forgot_password_forgot_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center"
                android:minLines="3"
                android:text="@string/enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_forgot_Password_tv" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fragment_forgot_password_signup_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/if_forgot_password_forgot_tv">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_fragment_email_et"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/ic_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:inputType="textEmailSubject" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fragment_forgot_password_signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="#F5F6F8"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_signup_cv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fragment_forgot_password_signup_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/signup_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:text="@string/send_email"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_forgot_password_signup_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_forgot_password_signup_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_forgot_password_signup_iv"
                        app:layout_constraintTop_toTopOf="@+id/fragment_forgot_password_signup_iv" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>