<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AllCategoriesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fargment_all_categories_main_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fragment_all_categories_close_iv"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_close"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/fragment_all_categories_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_categories"
                android:textSize="@dimen/_25ssp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_close_iv"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp" />

            <ScrollView
                android:id="@+id/fragment_all_categories_sv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fragment_all_categories_icons_cl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/fragment_all_categories_apparel_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/apparel_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apparel"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_apparel_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_apparel_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_apparel_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_beauty_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_apparel_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/beauty_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beauty"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_beauty_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_beauty_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_beauty_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_shoes_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_beauty_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/shoes_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shoes"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_shoes_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_shoes_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_shoes_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_electronics_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_shoes_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/electronics_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electronics"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_electronics_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_electronics_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_electronics_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_furniture_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_electronics_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/furniture_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/furniture"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_furniture_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_furniture_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_furniture_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_home_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_furniture_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/home_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_home_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_home_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_home_iv"/>

                    <ImageView
                        android:id="@+id/fragment_all_categories_stationary_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_home_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/stationary_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stationary"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/fragment_all_categories_stationary_iv"
                        app:layout_constraintStart_toStartOf="@+id/fragment_all_categories_stationary_iv"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_all_categories_stationary_iv"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/fragment_all_categories_sv"
                app:layout_constraintTop_toBottomOf="@+id/fragment_all_categories_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fragment_all_categories_chosen_icon_cl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

<!--                    <TextView-->
<!--                        android:id="@+id/fragment_all_categories_men_apparel_tv"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/men_s_apparel"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"/>-->

                    <ImageView
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mens_apparel"
                        android:scaleType="fitXY"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_13sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="@dimen/_15sdp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>