<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderPlacedActivity"
        android:background="#F5F6F8">

        <ImageView
            android:id="@+id/activity_order_placed_close_iv"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F5F6F8"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_order_placed"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_placed"
                android:textSize="@dimen/_30ssp"
                android:textColor="#515C6F"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <TextView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:text="@string/your_order_was_placed_successfully_for_more_details_check_all_my_orders_page_under_profile_tab"
                android:textSize="@dimen/_15ssp"
                android:textColor="#515C6F"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F5F6F8"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_order_placed_my_orders_btn"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    app:cornerRadius="@dimen/_17sdp"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_go_for_btns"
                    android:text="@string/my_orders"
                    android:padding="@dimen/_6sdp"
                    android:drawableRight="@drawable/ic_go_for_btns"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_orders"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_17sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintTop_toTopOf="@+id/activity_order_placed_my_orders_btn"
                    app:layout_constraintStart_toStartOf="@+id/activity_order_placed_my_orders_btn"
                    app:layout_constraintEnd_toEndOf="@+id/activity_order_placed_my_orders_btn"
                    android:layout_marginRight="@dimen/_15sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>





        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>